# memory-mcp

./: .gitignore  AGENTS.md  README.md  memory-mcp.nix  pyproject.toml
.github/workflows/: release.yml
src/memory_mcp/: __init__.py  config.py  embedder.py  faiss_store.py  file_lock.py  memory_service.py  server.py  sqlite_store.py  tools.py
